# flow-agent

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: m2_widget_e2e.rs  m3_install_cli.rs  m4_cli.rs  m6_m8_resource.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  unix.rs
crates/bridge/tests/: m0_transport.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: m0_contract.rs
crates/installer/: Cargo.toml
crates/installer/src/: lib.rs
crates/installer/tests/: m3_installer.rs  m4_statusline.rs
crates/providers/src/: lib.rs
crates/providers/tests/: provider_contract.rs
crates/quota/: Cargo.toml
crates/quota/src/: lib.rs
crates/runtime/src/: lib.rs  storage.rs  title.rs
crates/runtime/tests/: m1_runtime.rs  m4_data.rs
crates/server/: Cargo.toml
crates/server/src/: server.rs
crates/server/tests/: m2_api.rs
docs/: M13_PROVIDER_STATE_COORDINATION.md  M3_VERIFICATION.md  M4_VERIFICATION.md  M5_VERIFICATION.md  M6_VERIFICATION.md  M7_VERIFICATION.md  M8_VERIFICATION.md  M9_VERIFICATION.md  STATUS.md  USER_GUIDE_zh-CN.md  V1_1_FUNCTIONAL_CORRECTIONS.md  V1_ACCEPTANCE.md  WIDGET_V1_PLAN.md
fixtures/claude/: permission-request.json
fixtures/claude/2.1.210/: task-completed.json  task-created.json
fixtures/codex/: permission-request.json
fixtures/codex/0.144.4/: rate-limits-rollout.jsonl
scripts/: m0-e2e.sh
web/: app.css  app.js  index.html
