[workspace]
members = [
    "crates/app",
    "crates/bridge",
    "crates/core",
    "crates/installer",
    "crates/providers",
    "crates/quota",
    "crates/runtime",
    "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["net", "rt", "sync", "time"] }
toml_edit = "0.22"
uuid = { version = "1.18", features = ["v7", "serde"] }
