[package]
name = "flow-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
flow-agent-bridge = { path = "../bridge" }
flow-agent-core = { path = "../core" }
flow-agent-installer = { path = "../installer" }
flow-agent-quota = { path = "../quota" }
flow-agent-runtime = { path = "../runtime" }
flow-agent-server = { path = "../server" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
